<resources>
    <string name="app_name">BeLanGa</string>
    <string name="ingredient">Bahan</string>
    <string name="method">Cara Memasak</string>
    <string name="dalgonamethod">Combine the first three ingredients in a bowl and stir (with a whisk or hand mixer) until it turns from a dark brown concoction to a beige coloured thick, foamy mixture. Finish by scooping the mixture on to the top of the milk.</string>
    <string name="caramelmethod">Melt the sugar with half of the water on low heat until it dissolves and turns into honey color before adding the remaining water. Do not stir the sugar mixture when it is melting. Pour the caramel in a cup and tilt it to coat the entire base of the cup.Boil the milk with sugar and set it aside. In a separate bowl, beat the eggs and pour in the hot milk SLOWLY while whisking it to incorporate. Pour the custard onto the top of the caramel.Wrap the cup with aluminum foil and steam it for 10 mins. Once it is cooked and set, run a knife around the rim of the cup and invert onto a dessert plat</string>
    <string name="murtabakmethod">Cook the noodles until soft and drain the water.In a bowl, add in the eggs, a little bit of noodle seasoning, chopped onion, red chilli and set aside. Then, add the noodle into the egg mixture and mix well. Divide the mixture into two portions. Add a little cooking oil into a frying pan. Coat and heat the entire pan with oil. Then, pour a portion of the noodle mixture into the pan and fry until both sides are cooked and slightly brown. Serve immediately.</string>
    <string name="biscuitmethod">Mix everything (except honey) with your hands to create a breadcrumbs mixture (don’t overmix the ingredients, you will need to keep some texture.). Shape the mixture into dough balls and place them on a baking tray lined with parchment paper. Bake the biscuits at 180°C for 15 minutes. Brush honey on the top of the biscuits and it is ready to be served.</string>
    <string name="biscuitingredient">Recipe for 8 biscuits: 2.5 cup of plain flour (320g), 4 tps baking powder, 2 tbps sugar (more or less based on your own preference), 115g cold butter, Honey, 140ml fresh milk, 2 tbps vinegar</string>
    <string name="caramelingredient">(CARAMEL): 60g water...30g sugar, (CUSTARD): 30g sugar, 200ml milk, 2 eggs\n</string>
    <string name="murtabakingredient">(Recipe for 1 Murtabak Maggi)…1 pack of Maggi Curry...1 egg...Some green onion or scallion (Optional)\n</string>
    <string name="ayamkicapingredient">Pumpkin onion (Sliced) ... 2 red chilli seeds (Sliced) ... 2 cloves of garlic (Sliced) ... 1 inch of ginger (Sliced) ... ½ cup of water ... 3 tablespoons of thick soy sauce. ..3 tablespoons tomato sauce ... 2 tomato seeds (Sliced ​​4) ... 1 onion leaf (Sliced ​​thinly) ... 3 tablespoons cooking oil</string>
    <string name="paprikingredient">300 g isi ayam (Dipotong kecil)...1 labu bawang besar (Dibelah 6)...3 ulas bawang putih (Diketuk)...5 biji cili api (Diketuk)\n 1 batang serai (Diketuk)... ½ batang lobak merah (Dipotong kecil)... 2 sudu makan kicap pekat... 5 sudu makan sos tomato... 5 sudu makan sos cili... ½ cawan air... 3 sudu makan sos tiram... 1 biji capsicum hijau... 100 g kubis bunga... 5 helai daun limau purut... 3 biji limau kesturi (Diambil jusnya)... 2 sudu makan minyak masak</string>
    <string name="kicapmethod">Panaskan minyak dan tumiskan bahan yang dihiris sehingga wangi...Masukkan ayam dan gaul rata....Masukkan air, kicap, dan sos tomato. Biarkan sehingga mendidih....Apabila mendidih, masukkan tomato dan daun bawang....Gaulkan dan angkat.Sedia dihidangkan</string>
    <string name="paprikmethod">Panaskan minyak dan tumiskan bawang besar dan bahan yang diketuk sehingga wangi.... Masukkan isi ayam dan kacau rata.... Masukkan lobak merah, kicap pekat, sos tomato, sos cili, air, dan sos tiram. Biarkan mendidih.... Masukkan capsicum dan kubis bunga kemudian kacau rata.... Apabila mendidih, masukkan daun limau purut dan kacau.... Masukkan jus limau dan tutup api.... Hidangkan bersama nasi putih, mi, ataupun bihun yang sudah dicelur</string>
    <string name="masakmerahingredient">1/2 ekor ayam... sedikit garam kunyit... (Bahan kisar) 4-5 biji cili kering... 1 cm halia... 2 ulas bawang putih... 1 labu bawang besar... 1 biji tomato-potong dadu... 1/2 cawan sos tomato</string>
    <string name="masakmerahmethod">Bersih ayam. Potong kecil-kecil dan gaul dengan garam kunyit. Goreng sehingga 2/3 masak... Tumis bahan kisar kecuali sos tomato dan tomato sehingga naik bau. Kemudian barulah dimasukkan sos dan buah tomato. Tumis sehingga naik minyak.... Masukkan ayam. Biar kuah jadi pekat. Sekali sekala hendaklah digaul balikkan.... Bila kuah dah pekat bolehlah masuk bahan-bahan hias. Biar 1-2 minit. Kemudian padamkan api.</string>
    <string name="rendangingredient">1/ 2 ekor ayam ( dipotong kecil )...1 biji kelapa ( blender dgn 2 1/2 cawan air dan ambil santannya)...5 helai daun limau purut ( carik-carikkan )...2 paket kecil kerisik...2 helai daun kunyit ( hiris )...1 keping asam keping...1 1/2 sdb gula pasir...1/ 2 sdb garam...1 sdt perasa ...1 1/2 senduk minyak masak</string>
    <string name="rendangmethod">Panaskan minyak...Tumis bahan kisar....Masukkan asam keping ,gula dan tumis hingga betulbetul naik minyak....Masukkan kerisik, daun limau purut dan santan....Tunggu sehingga santan mendidih dan mula kering (sentiasa kacau jangan sampai pecah santan).....Masukkan ayam dan letak garam dan perasa.....Tunggu sehingga ayam empuk.. ...Tabur daun kunyit ...Apabila kuah dah pekat…sesuaikan rasa.. ...Tutup api dan sedia utk dihidang</string>
    <string name="kunyitingredient">4-5 keping dada ayam – potong kecil...3 batang kacang panjang – potong panjang...1 biji kuning telur...1 sudu makan tepung gandum...1/2 sudu teh garam, perasa, gula...1/2 batang lobak merah – potong kecil...1 biji bawang besar – potong/ mayang...3 ulas bawang putih – ketuk/ cincang...1-3 cili merah dan hijau – mayang...Minyak masak – secukupnya</string>
    <string name="kunyitmethod">Masukkan isi ayam yang telah dipotong bersama garam, kunyit, kuning telur dan tepung ke dalam mangkuk. Gaulkan semua bahan sehingga sebati....Kemudian, panaskan minyak masak dan goreng semua bahan yang telah digaul tadi sehingga hampir garing. Angkat dan toskan ayam itu. Diingatkan supaya tidak menggoreng terlalu lama, takut ayam keras....Keluarkan lebihan minyak dan tinggalkan sedikit untuk menumis. Tumiskan bawang besar dan bawang putih sehingga naik bau. Kemudian, tambahkan bahan lain; kacang panjang, lobak merah, dan cili. Tumis bersama garam, gula dan perasa seperti sos tiram....Gaulkan semua bahan sehingga sebati dan naik bau. Masukkan ayam yang telah digoreng dan gaul sekali lagi sehingga semua bahan sebati bersama ayam. Jangan goreng terlalu. Apabila semua bahan sudah masak, tutup....Hidangan sedia untuk dihidangkan</string>
    <string name="pepperingredient">Ayam... 2 biji bawang putih – dihiris... 2 biji bawang besar(merah) – dihiris... 2 inci halia – dihiris panjang... 2 tangkai lada kering... 2 sudu lada hitam – ditumbuk agak kasar.... 2 sudu sos lada hitam... 2 sudu sos tiram... Kiub perasa ayam (suku kiub)... Garam secukup rasa (hujung sudu)</string>
    <string name="methodblackpepper">Potong ayam ikut suka, kalau saya sederhana. Goreng dan asingkan. Panaskan minyak, tumis bawang putih, bawang besar, halia, lada kering dan lada hitam hingga kecoklatan dan naik bau. Tuang sedikit air, masukkan sos lada hitam, sos tiram dan garam secukup rasa. Kacau sebati hingga agak likat. Masukkan ayam yang telah digoreng dan gaulkan sehingga sebati. Sedia untuk di hidang!</string>
    <string name="salmongrillingredient">Bahan-bahan ((2 keping stik salmon)). Bahan Perapan ((1 sudu makan jus lemon. 1/4 sudu teh serbuk lada hitam. herba dill dan thyme secukupnya. garam secukup rasa)). Bahan Sos ((250gm mentega. 2 sudu makan jus lemon. 2 ulas bawang putih (dicincang halus). sedikit herba thyme. garam secukup rasa.))</string>
    <string name="salmongrillmethod">1. Bersihkan salmon dan perap dengan bahan perapan selama 20 minit. 2. Gril salmon lebih kurang 15 minit sehingga masak. 3. Bagi menghasilkan sos, panaskan mentega dengan api perlahan. 4. Masukkan herba dan jus perahan lemon. Kacau sebati. 5. Padamkan api dan perasakan dengan sedikit garam. Hidangkan bersama salmon.</string>
    <string name="chickenrouladeingredient">Bahan-bahan ((1 keping dada ayam. 50gm serbuk roti. tali untuk mengikat)). Bahan Perapan ((1 sudu makan madu. 2 tangkai herba thymes. 1/4 sudu teh serbuk lada hitam. garam dan serbuk perasa secukupnya)). Bahan Sos ((2 ulas bawang merah (dicincang halus). 1 ulas bawang putih (dicincang halus). 1 helai daun bay. 3 sudu makan mentega. 300ml susu. 3 keping keju cheddar. 1 sudu teh keju parmesan. 2 sudu makan roux. garam dan serbuk perasa secukupnya))</string>
    <string name="chickenroulademethod">Ketuk dada ayam bagi menipiskan dan memudahkan proses menggulung dan mengikat. Lumur bahan perapan dan biarkan seketika. Letakkan serbuk roti pada ayam dan gulung ayam dengan kemas. Ikat dada ayam supaya serbuk roti tidak keluar. Bakar ayam dengan suhu 180C selama 30 minit. Untuk menghasilkan sos, cairkan mentega dan tumis bawang merah serta bawang putih hingga wangi. Kemudian, masukkan susu dan daun bay. Setelah sedikit mendidih, masukkan keju cheddar dan parmesan. Pekatkan sos dengan sedikit roux dan perasakan dengan garam serta serbuk perasa dengan secukupnya. Sedia dihidangkan bersama ayam tadi.</string>
    <string name="lasagnaingredient">Bahan- Bahan ((1 kotak (oven-ready) pasta lasagna, 650gm daging kisar, 2 batang saleri (panggang dan kisar), 2 biji tomato (panggang dan kisar), 2 batang lobak merah (panggang dan kisar), 2 biji bawang besar (panggang dan kisar), 3 biji bawang putih, 1 tin kecil tomato puri, 6-7 cendawan butang, 500ml air )). Bahan Herba ((2 sudu kecil oregano, 2 sudu kecil paprika, 2 helai daun bay, 1 sudu kecil thyme, lada hitam dan garam, 125ml susu sejat, 2 sudu makan serbuk keju parmesan, 1 kiub stok daging, 100gm mentega, 2-3 sudu minyak zaitun)). Bahan Sos Keju ((60gm tepung gandum, 375ml susu cair segar, 100gm mentega, 7 keping keju cheddar, secubit garam))</string>
    <string name="lasagnamethod">1. Kisar bahan-bahan yang telah dipanggang iaitu saleri, tomato, lobak merah dan bawang besar dengan 500ml air. Ketepikan. 2. Panaskan mentega dengan minyak zaitun. Goreng bawang putih sehingga kekuningan dan masukkan daging kisar. 3. Goreng sehingga naik bau wangi dan masukkan bahan-bahan yang telah dikisar. Kacau sehingga sebati dan masukkan air sekiranya pekat. Setelah mendidih masukkan tomato puri dan semua bahan herba, kiub stok daging, lada hitam, sedikit garam dan sedikit gula. Kacau sekata. Apabila air masak, masukkan susu dan keju parmesan dan kacau lagi sehingga sebati. Masak jangan smapai ia terlalu cair. Angkat dan sejukkan. Ketepikan. 4. Untuk sos keju, panaskan mentega dan masukkan tepung gandum dan kacau sehingga rata. 5. Masukkan susu dan keju dan kacau sehingga sebati. Pastikan sos tidak terlalu cair atau pekat. Angkat dan sejukkan. 6. Untuk membuat lapisan lasagna, sapukan mentega secara rata pada kaserol atau bekas pembakar. Letakkan sos daging dan ratakan. 7. Susunkan lasagna pasti di seluruh permukaan bekas. 8. Sapukan sos keju dan taburkan serbuk keju parmesan. 9. Sapukan sos daging lagi dan ratakan. Seterusnya susunkan pasta lasagna. 10. Sapukan sos keju dengan rata. Taburkan keju mozarela di seluruh permukaan. 11. Bakar pada suhu 180 C selama 1/2 jam sehingga keju mozarela cair dan kekuningan. Barulah angkat dan enak dimakan ketika panas.</string>
</resources>