<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lasagna">

    <ImageView
        android:layout_width="346dp"
        android:layout_height="187dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:src="@drawable/lasagna"/>

    <TextView
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredient"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/lasagnaingredient"
        android:textColor="@color/black"
        android:textSize="16sp"/>
    <TextView
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/method"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        />
    <TextView
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/lasagnamethod"
        android:textColor="@color/black" />

</LinearLayout>