<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chickenrouladecreamy">
    <ImageView
        android:layout_width="346dp"
        android:layout_height="187dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:src="@drawable/roulade"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/ingredient"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_marginLeft="10dp"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/chickenrouladeingredient"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/method"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="211dp"
        android:layout_marginStart="10dp"
        android:text="@string/chickenroulademethod"
        android:textColor="@color/black"
        android:textSize="15sp" />


</LinearLayout>